2002-04-02  jacob berkman  <jacob@ximian.com>

	* service-edit-dialog.c (fill_dialog): show 'unknown' in the
	protocol name for the unknown protocol
	(validate_data): actually run and destroy the error dialogs

2002-03-30  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (populate_component_list) : add some protection
	  for when there is no default.

2002-03-30  Lauris Kaplinski  <lauris@ximian.com>

	* service-info.c: Added ghelp
	(service_info_using_custom_app): Fix crash

	* mime-type-info.c (mime_type_info_save): Strip starting slash

	* mime-edit-dialog.c (store_data): Strip starting slash

2002-03-08  Lauris Kaplinski  <lauris@ximian.com>

	* mime-type-info.c (mime_type_info_using_custom_app): Return TRUE
	if default_action does not exist (it is better than crash)

	* mime-edit-dialog.c (store_data): Create default_action if there is none

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* file-types-applet.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-20  Mark McLoughlin  <mark@skynet.ie>

	* file-types.desktop.in: use the proper executable name.

2002-02-17  Bradford Hovinen  <hovinen@ximian.com>

	* mime-type-info.c (get_icon_pixbuf): Try to find the icon from
	the MIME type.
	(mime_type_info_get_icon_path): Fetch the icon name from the MIME
	type if necessary
	(get_icon_pixbuf): Call get_real_icon_path
	(get_real_icon_path): Implement. Factor from
	mime_type_info_get_icon_path
	(mime_type_info_get_icon_path): Call get_real_icon_path
	(mime_type_info_new): Retrieve the icon here

	* mime-types-model.c (mime_types_model_get_value): Set the object
	value to NULL if the icon is NULL

	* mime-type-info.c (get_icon_pixbuf): Give up if it can't find
	nautilus/i-regular-24.png
	(mime_type_info_get_icon): Only ref the pixbuf if non-NULL

	* mime-category-edit-dialog.c (fill_dialog): Fill the name entry
	with the description, not the name field

	* mime-types-model.c (mime_types_model_get_value): Use description